Fix `pull-right` CSS class alignment

--- a/assets/css/src/base.css
+++ b/assets/css/src/base.css
@@ -46,7 +46,8 @@ hr {
 }
 
 .pull-right {
-    text-align: right
+    text-align: right;
+    margin-left: auto
 }
 
 ul.no-bullet li {
